# minimal-nixos-pytorch-example

./: README.md  pyproject.toml  shell.nix
